erDiagram
    Itinerario ||--o{ ReservaCamarote : "1..*"
    Itinerario ||--o{ Recorrido : "1"
    Itinerario ||--o{ Puerto : "1..*"
    Recorrido ||--o{ Navio : "1"
    Puesto }|..|{ HistorialTripulante : "1..*"
    TipoCamarote ||--o{ Camarote : "1"
    Camarote ||--o{ EstadoCamarote : "1"
    Navio ||--o{ Cubierta : "1..*"
    Cubierta ||--o{ Camarote : "1..*"
    Itinerario ||--o{ CategoriaItinerario : "1"
    Pasajero ||--o{ Pais : "1"
    Puerto ||--o{ Pais : "1"
    Pasajero ||--o{ ReservaCamarote : "1"
    ReservaCamarote ||--o{ Camarote : "1"
    Pais ||--o{ Ciudad : "1..*"
    Navio ||--o{ CambioEstadoNavio : "1..*"
    CambioEstadoNavio ||--o{ EstadoNavio : "1"
    Recorrido ||--o{ CambioPuerto : "1..*"
    CambioPuerto ||--o{ Puerto : "1..*"
    Navio ||--o{ CategoriaNavio : "1"
    Tripulante ||--o{ HistorialTripulante : "1..*"
    Tripulante ||--o{ Tripulante : "1"
    HistorialTripulante }|..|{ Navio : "1"

    Itinerario {
        String nombreItinerario
        String descripcionItinerario
    }
    Recorrido {
        int numeroEscala
        datetime fechaViaje
        float duracionViaje
    }
    Navio {
        int codigoNavio
        String nombreNavio
        float altura
        float eslora
        float manga
        float desplazamiento
        float autonomiaViaje
        int cantidadCamarotes
        int maxCantidadPasajeros
        int cantidadMotores
        int cantidadTripulantes
    }
    Cubierta {
        int numeroCubierta
        String ubicacionCubierta
        String descripcionCubierta
    }
    Camarote {
        String ubicacionCamarote
        int numeroCamarote
    }
    Tripulante {
        String nombreTripulante
        String legajo
        String nombreJefe
    }
    HistorialTripulante {
        datetime fechaCambio
    }
    Puesto {
        String nombrePuesto
        String descripcionPuesto
    }
    Puerto {
        String nombrePuerto
        String descripcionPuerto
    }
    Pasajero {
        String tipoDocumento
        int numeroDocumento
        String nombre
    }
    EstadoNavio {
        String nombreEstadoNavio
        String descripcionEstadoNavio
    }
    EstadoCamarote {}
    ReservaCamarote {
        datetime fechaReserva
    }
    TipoCamarote {
        String nombreTipoCamarote
        String descripcionTipoCamarote
    }
    CambioEstadoNavio {
        String nombreEstadoNavio
        datetime fechaCambioEstado
    }
    CategoriaNavio {
        String nombreCategoria
        String descripcionCategoria
    }
    CategoriaItinerario {
        String nombreCategoria
        String descripcionCategoria
    }
    Pais {
        String nombrePais
        String descripcionPais
        String moneda
        String idioma
    }
    Ciudad {
        String nombreCiudad
        String descripcionCiudad
    }
    CambioPuerto {
        datetime fechaHoraLlegada
    }